--- a/solution/1306.Jump-Game-III.md
+++ b/solution/1306.Jump-Game-III.md
@@ -40,138 +40,153 @@ Explanation: There is no way to reach at index 1 with value 0.
 
 #### 分析
 
-这道题考察的是图的最短路径的求解方法，这里考虑使用Dijkstra算法与Floyd算法求解。
+这道题考察的是图的连通性问题，即start顶点与值为0的顶点是否存在某条连通路径。
 
 #### 思路
-这里提供两种解法。
-* Dijkstra算法: 比较适用于求解从某个顶点出发的最短路径。
-* Floyd算法: 适用于求解任意两个顶点的最短路径，时间复杂度为O(n^3)，所以如果只需要求解从某顶点出发的最短路径，Dijkstra算法较好。Floyd算法本质上是dp算法。
+这里提供三种解法。前两种即图常用的DFS算法与BFS算法，
+* 图的DFS算法与BFS算法: 值得注意的是，本题种如果使用邻接矩阵保存顶点间的关系，会出现内存溢出现象。所以我们选择使用邻接链表进行存储。
+* 分治算法: 分别求解start顶点的start-arr[start]顶点，及start+arr[start]顶点是否为0
 
 #### 代码
 
 ##### JAVA
-
-1.Dijkstra算法
-
-* Runtime: 6 ms, faster than 97.06% of Java online submissions for Network Delay Time.
-* Memory Usage: 44.2 MB, less than 90.48% of Java online submissions for Network Delay Time.
-
+***报错的解法***
+邻接矩阵会大量使用内存空间，导致Memory Limit Exceeded报错。
 ```Java
 /**
  * @author RyuuI
  */
 class Solution {
-	public int networkDelayTime(int[][] times, int N, int K) {
-		int[][] time_matrix = new int[N+1][N+1];
-		int maxTime = 0;
-
-		//将所有顶点及权重存入矩阵
-		for(int i=1;i<=N;i++){
-			for(int j=1;j<=N;j++){
-				if(i==j)
-					time_matrix[i][j] =0;
-				else
-					time_matrix[i][j] = Integer.MAX_VALUE;
+	boolean[] visited;
+	public boolean canReach(int[] arr, int start) {
+		visited = new boolean[arr.length];
+		int[][] arr_matrix = new int[arr.length][arr.length];
+		for(int i=0;i<arr.length;i++){
+			arr_matrix[i][i] =1;
+			if((i-arr[i])>=0)
+				arr_matrix[i][i-arr[i]] = 1;
+			if((i+arr[i])<arr.length)
+				arr_matrix[i][i+arr[i]] = 1;
+		}
+		return dfs(arr,arr_matrix,start,visited);
+	}
+	private boolean dfs(int[] arr,int[][] arr_matrix,int start,boolean[] visited){
+		if(arr[start]==0)
+			return true;
+		visited[start] = true;
+		for(int i=0;i<arr.length;i++){
+			if(arr_matrix[start][i] ==1 && !visited[i])
+				if(arr[i] == 0 || dfs(arr,arr_matrix,i,visited))
+					return true;
 			}
+			return false;
 		}
-		for(int i =0;i<times.length;i++){
-			time_matrix[times[i][0]][times[i][1]] = times[i][2];
-		}
-		//创建顶点K到其他顶点的distanceMap
-		Map<Integer, Integer> distanceMap = new HashMap<Integer, Integer>();
-		//创建accessedSet用于记录顶点是否已经遍历
-		Set<Integer> accessedSet = new HashSet<Integer>();
+	}
+```
 
-		//将顶点K直接相连的顶点的权重存入distanceMap
-		for(int i=1;i<=N;i++){
-			distanceMap.put(i,time_matrix[K][i]);
-		}
-		accessedSet.add(K);
+1.DFS算法
 
-		//下面为核心部分，开始遍历所有顶点，更新最短路径
-		for(int i=1;i<=N;i++){
-			int minDistanceFromK = Integer.MAX_VALUE;
-			int minDistanceIndex = -1;
-			for(int j=1;j<=N;j++){
-				if(!accessedSet.contains(j) && distanceMap.get(j) <minDistanceFromK){
-					minDistanceFromK = distanceMap.get(j);
-					minDistanceIndex = j;
-				}
-			}
-			if(minDistanceIndex ==-1)
-				break;
-			accessedSet.add(minDistanceIndex);
-			for(int k=1;k<=N;k++){
-				int weight = time_matrix[minDistanceIndex][k];
-				int preDistance = distanceMap.get(k);
-				if(k != minDistanceIndex && weight != Integer.MAX_VALUE && (minDistanceFromK+ weight< preDistance)){
-					distanceMap.put(k,minDistanceFromK+ weight);
-				}
-			}
-		}
+* Runtime: 6 ms, faster than 6.12% of Java online submissions for Jump Game III.
+* Memory Usage: 51.1 MB, less than 100.00% of Java online submissions for Jump Game III.
 
-		for(int key:distanceMap.keySet()){
-			if(key != K && maxTime < distanceMap.get(key))
-				maxTime = distanceMap.get(key);
-			if(maxTime == Integer.MAX_VALUE)
-				return -1;
+```Java
+/**
+ * @author RyuuI
+ */
+class Solution {	
+	boolean[] visited;
+	public boolean canReach(int[] arr, int start) {
+		visited = new boolean[arr.length];
+		LinkedList<Integer> adj[] = new LinkedList[arr.length];
+		for(int i=0;i<arr.length;i++)
+			adj[i] = new LinkedList<Integer>();
+		for(int i=0;i<arr.length;i++){
+			if((i-arr[i])>=0)
+				adj[i].add(i-arr[i]);
+			if((i+arr[i])<arr.length)
+				adj[i].add(i+arr[i]);
 		}
-		return maxTime;
+		return dfs(arr,adj,start,visited);
+	}
+	private boolean dfs(int[] arr,LinkedList<Integer> adj[],int start,boolean[] visited){
+		if(arr[start]==0)
+			return true;
+		visited[start] = true;
+		for(int num:adj[start]){
+			if(!visited[num] && dfs(arr,adj,num,visited))
+				return true;
+		}
+		return false;
 	}
 }
 ```
 
+2.BFS算法
 
-2.Floyd算法
+* Runtime: 6 ms, faster than 6.12% of Java online submissions for Jump Game III.
+* Memory Usage: 51.8 MB, less than 100.00% of Java online submissions for Jump Game III.
 
-* Runtime: 19 ms, faster than 71.15% of Java online submissions for Network Delay Time.
-* Memory Usage: 44.3 MB, less than 90.48% of Java online submissions for Network Delay Time.
+```Java
+/**
+ * @author RyuuI
+ */
+class Solution {	
+	public boolean canReach(int[] arr, int start) {
+		Queue<Integer> queue = new LinkedList<Integer>();
+		boolean[] visited = new boolean[arr.length];
+		LinkedList<Integer> adj[] = new LinkedList[arr.length];
+		for(int i=0;i<arr.length;i++)
+			adj[i] = new LinkedList<Integer>();
+		for(int i=0;i<arr.length;i++){
+			if((i-arr[i])>=0)
+				adj[i].add(i-arr[i]);
+			if((i+arr[i])<arr.length)
+				adj[i].add(i+arr[i]);
+		}
+		if(arr[start] ==0)
+			return true;
+		queue.offer(start);
+		while(queue.size()>=1){
+			int head = queue.poll();
+			visited[head] = true;
+			for(int num:adj[head]){
+				if(arr[num]==0)
+					return true;
+				if(!visited[num])
+					queue.offer(num);
+			}
+		}
+		return false;
+	}
+}
+```
+
+3.分治算法
+
+* Runtime: 0 ms, faster than 100.00% of Java online submissions for Jump Game III.
+* Memory Usage: 42.9 MB, less than 100.00% of Java online submissions for Jump Game III.
 
 ```Java
 /**
  * @author RyuuI
  */
 class Solution {
-	public int networkDelayTime(int[][] times, int N, int K) {
-		int[][] time_matrix = new int[N+1][N+1];
-		int maxTime = 0;
+	boolean[] visited;
+	public boolean canReach(int[] arr, int start) {
+		visited = new boolean[arr.length];
 
-		for(int i=1;i<=N;i++){
-			for(int j=1;j<=N;j++){
-				if(i==j)
-					time_matrix[i][j] =0;
-				else
-					time_matrix[i][j] = Integer.MAX_VALUE;
-			}
-		}
-
-		for(int i =0;i<times.length;i++){
-			time_matrix[times[i][0]][times[i][1]] = times[i][2];
-		}
-
-		for(int k=1;k<=N;k++){
-			for(int i=1;i<=N;i++){
-				for(int j=1;j<=N;j++){
-					if(time_matrix[i][k]!= Integer.MAX_VALUE && time_matrix[k][j] != Integer.MAX_VALUE &&((time_matrix[i][k]+time_matrix[k][j])<time_matrix
-						[i][j])){
-						time_matrix[i][j] = time_matrix[i][k] + time_matrix[k][j];
-				}
-			}
-
-		}
-
+		return helper(arr,start,visited);
 	}
-	for(int i=1;i<=N;i++){
-		if(i!=K){
-			System.out.println(time_matrix[K][i]);
-			if(time_matrix[K][i] == Integer.MAX_VALUE)
-				return -1;
-			else if(time_matrix[K][i] > maxTime)
-				maxTime = time_matrix[K][i];
-		}
+	private boolean helper(int[] arr,int start,boolean[] visited){
+		visited[start] = true;
+		if(arr[start] == 0)
+			return true;
+
+		boolean left = (start-arr[start]>=0) &&  !visited[start-arr[start]] && helper(arr,start-arr[start],visited);
+		boolean right = (start+arr[start] < arr.length) && !visited[start+arr[start]] && helper(arr,start+arr[start],visited);
+
+		return left || right;
 	}
-	return maxTime;
-}
 }
 ```
 
