--- a/solution/1306.Jump-Game-III.md
+++ b/solution/1306.Jump-Game-III.md
@@ -4,7 +4,7 @@
 
 * 时间：2020-02-23
 * 题目链接：[English](https://leetcode.com/problems/jump-game-iii/)/[中文](https://leetcode-cn.com/problems/jump-game-iii/)
-* Tag：`Graph`
+* Tag：`Graph` `DFS` `BFS`
 ## 题目描述
 Given an array of non-negative integers arr, you are initially positioned at start index of the array. When you are at index i, you can jump to i + arr[i] or i - arr[i], check if you can reach to any index with value 0.  
 Notice that you can not jump outside of the array at any time.  
