--- a/solution/1306.Jump-Game-III.md
+++ b/solution/1306.Jump-Game-III.md
@@ -44,8 +44,8 @@ Explanation: There is no way to reach at index 1 with value 0.
 
 #### 思路
 这里提供三种解法。前两种即图常用的DFS算法与BFS算法，第三种为分治算法
-* 图的DFS算法与BFS算法: 值得注意的是，本题种如果使用邻接矩阵保存顶点间的关系，会出现内存溢出现象。所以我们选择使用邻接链表进行存储。
-* 分治算法: 分别求解start顶点的start-arr[start]顶点，及start+arr[start]顶点是否为0
+* 图的DFS算法与BFS算法: 值得注意的是，本题中如果使用邻接矩阵保存顶点间的关系，会出现内存溢出现象，所以我们使用邻接链表进行存储。
+* 分治算法: 分别求解start顶点的start-arr[start]顶点，及start+arr[start]顶点的值是否为0。
 
 #### 代码
 
