--- a/solution/127.Word-Ladder.md
+++ b/solution/127.Word-Ladder.md
@@ -55,7 +55,7 @@ Explanation: The endWord "cog" is not in wordList, therefore no possible transfo
 
 ##### JAVA
 
-1.宽度优先遍历(BFS) **目前的解法效率太低，待优化**
+1.宽度优先遍历(BFS) + 建立邻接表（**朴素解法，时空复杂度都很高，效率最低**）
 
 * Runtime: 766 ms, faster than 8.55% of Java online submissions for Word Ladder.
 * Memory Usage: 45.6 MB, less than 13.14% of Java online submissions for Word Ladder.
@@ -136,6 +136,56 @@ class Solution {
     }
 
 }
+```
+
+2.宽度优先遍历(BFS) + 不使用邻接表（**朴素解法的改进，可以改善空间使用量，但是时间复杂度仍然高**）
+
+* Runtime: 676 ms, faster than 12.99% of Java online submissions for Word Ladder.  
+* Memory Usage: 39.4 MB, less than 91.24% of Java online submissions for Word Ladder.
+
+```Java
+/**
+ * @author RyuuI
+ */
+class Solution {
+    public int ladderLength(String beginWord, String endWord, List<String> wordList) {
+
+        Queue<String> queue = new LinkedList<String>();
+        boolean[] visited = new boolean[wordList.size()];
+        int count = 1;
+
+        queue.offer(beginWord);
+        queue.offer("");
+
+        while(queue.size()>1){
+            String head = queue.poll();
+            for(int i=0;i<wordList.size();i++){
+                if(!visited[i] && difference_count(head,wordList.get(i))){
+                    if(wordList.get(i).equals(endWord))
+                        return count+1;
+                    queue.offer(wordList.get(i));
+                    visited[i] = true;
+                }
+            }
+            if(queue.peek() == ""){
+                queue.poll();
+                queue.offer("");
+                count++;
+            }  
+        }
+        return 0;
+    }
+
+
+    private boolean difference_count(String stringA, String stringB)
+    {
+        int count=0;
+        for(int i =0;i<stringA.length();i++)
+            if(stringA.charAt(i) != stringB.charAt(i))
+                count++;
+            return count==1;
+        }
+    }
 ```
 
 ##### C++
