--- a/solution/127.Word-Ladder.md
+++ b/solution/127.Word-Ladder.md
@@ -191,6 +191,144 @@ class Solution {
     }
 ```
 
+3.双向宽度优先遍历(双向BFS) + 当前单词和单词表中的单词做不同位数的比较（**本题中，使用该方法找寻邻接单词的效率低**）
+
+* Runtime: 146 ms, faster than 30.49% of Java online submissions for Word Ladder.   
+* Memory Usage: 41 MB, less than 70.07% of Java online submissions for Word Ladder.
+
+```Java
+/**
+ * @author RyuuI
+ */
+class Solution {
+	public int ladderLength(String beginWord, String endWord, List<String> wordList) {
+
+		int size = wordList.size();
+		int path_count =2;
+		Set<String> wordSet = new HashSet<String>(wordList);
+
+		if(!wordSet.contains(endWord))
+			return 0;
+
+		Set<String> startSet = new HashSet<String>();
+		Set<String> endSet = new HashSet<String>();
+
+		startSet.add(beginWord);
+		endSet.add(endWord);
+		wordSet.remove(beginWord);
+
+		while(startSet.size()>0){
+			if(startSet.size() > endSet.size()){
+				Set<String> temp = startSet;
+				startSet = endSet;
+				endSet = temp;
+			}
+			wordSet.removeAll(startSet);
+			Set<String> newSet = new HashSet<String>();
+
+			for(String str:startSet){
+				for(String str_new:wordSet){
+					if(difference_count(str,str_new)){
+						if(endSet.contains(str_new))
+							return path_count;
+						newSet.add(str_new);
+					}
+				}
+			}
+			startSet = newSet;
+			path_count++;
+		}
+		return 0;
+
+	}
+	private boolean difference_count(String stringA, String stringB)
+	{
+		if(stringA.equals(stringB))
+			return false;
+		int count=0;
+		for(int i =0;i<stringA.length();i++){
+			if(stringA.charAt(i) != stringB.charAt(i)){
+				count++;
+				if(count >1)
+					return false;
+			}
+		}
+		return true;
+	}
+}
+```
+
+4.双向宽度优先遍历(双向BFS) + 遍历与当前单词一个字母不同的所有单词（**本题中，使用该方法找寻邻接单词效率最高**）
+
+* Runtime: 9 ms, faster than 99.60% of Java online submissions for Word Ladder.   
+* Memory Usage: 42.4 MB, less than 37.23% of Java online submissions for Word Ladder.
+
+```Java
+/**
+ * @author RyuuI
+ */
+class Solution {
+	public int ladderLength(String beginWord, String endWord, List<String> wordList) {
+
+		int size = wordList.size();
+		int path_count =2;
+		Set<String> wordSet = new HashSet<String>(wordList);
+
+		if(!wordSet.contains(endWord))
+			return 0;
+
+		Set<String> startSet = new HashSet<String>();
+		Set<String> endSet = new HashSet<String>();
+
+		startSet.add(beginWord);
+		endSet.add(endWord);
+		wordSet.remove(beginWord);
+
+		while(startSet.size()>0){
+			if(startSet.size() > endSet.size()){
+				Set<String> temp = startSet;
+				startSet = endSet;
+				endSet = temp;
+			}
+			wordSet.removeAll(startSet);
+			Set<String> newSet = new HashSet<String>();
+
+			for(String str:startSet){
+				Set<String> searchSet = search(str,wordSet);
+				for(String str_new:searchSet){
+					if(endSet.contains(str_new))
+						return path_count;
+					newSet.add(str_new);
+				}
+			}
+			startSet = newSet;
+			path_count++;
+		}
+		return 0;
+
+	}
+
+	private Set<String> search(String word,Set<String> wordSet){
+		Set<String> newSet = new HashSet<String>();
+		char[] c = word.toCharArray();
+
+		for(int i =0;i<c.length;i++){
+			char tmp = c[i];
+			for(char l ='a';l<='z';l++){
+				if(l==tmp)
+					continue;
+				c[i] = l;
+				String newWord = String.valueOf(c);
+				if(word_set.contains(newWord))
+					newSet.add(newWord);
+			}
+			c[i] = tmp;
+		}
+		return newSet;
+	}
+}
+```
+
 ##### C++
 
 
