--- a/solution/127.Word-Ladder.md
+++ b/solution/127.Word-Ladder.md
@@ -51,7 +51,7 @@ Explanation: The endWord "cog" is not in wordList, therefore no possible transfo
 #### 思路
 朴素的解法是使用单向BFS计算层数获得最短路径值，但是这种解法的时空复杂度都较高。  
 有两种效率较高的解法：  
-1. 双向BFS算法：未曾使用过的算法，可以从两端进行BFS搜索，如果两端的BFS的元素存在交叉，则存在路径。 
+1. 双向BFS算法：新掌握的优化算法，可以从两端进行BFS搜索，如果两端的BFS的元素存在交叉，则存在路径。 
 2. SPFA算法：根据大佬们的说法，这种算法存在缺陷。在实际的算法题中，可被特殊数据设计搞残，因此暂不做解答。
 
 #### 代码
