--- a/solution/207.Course-Schedule.md
+++ b/solution/207.Course-Schedule.md
@@ -33,62 +33,66 @@ Explanation: There are a total of 2 courses to take.
 
 
 #### 分析
-
-这道题是层次遍历的算法，只要遍历每一层，并且计算其平均值即可。值得注意的是，本题的存储要考虑到int型可能发生溢出，所以应该使用long型存储和的结果。  
+这道题实质求的是AOV图中是否存在环。因为如果存在环，证明两门课程之间互为前置课程，因而形成矛盾。  
 
 #### 思路
-略
+AOV图的求解，可以使用拓扑排序或者遍历算法判断是否存在环。  
+* 拓扑排序：对于AOV图，寻找环是否存在的首选方法是拓扑排序。从一个入度为0的节点开始，依次删除入度为0的节点，并将该节点指向的下一个节点的入度减-1，判断是否最后所有的节点都可以被删除。如果所有节点都可以被删除，证明该AOV图可以遍历所有节点。 
+* 遍历算法：
 
 #### 代码
 
 ##### JAVA
 
-1.递归法
+1.拓扑排序
 
-* Runtime: 2 ms, faster than 93.92% of Java online submissions for Average of Levels in Binary Tree.
-* Memory Usage: 42.9 MB, less than 8.00% of Java online submissions for Average of Levels in Binary Tree.
+* Runtime: 4 ms, faster than 77.43% of Java online submissions for Course Schedule.
+* Memory Usage: 41.6 MB, less than 98.46% of Java online submissions for Course Schedule.
 
 ```Java
 /**
  * @author RyuuI
- * Definition for a binary tree node.
- * public class TreeNode {
- *     int val;
- *     TreeNode left;
- *     TreeNode right;
- *     TreeNode(int x) { val = x; }
- * }
  */
 class Solution {
-	List<Long> sum_list = new ArrayList<Long>();
-	List<Integer> count_list = new ArrayList<Integer>();
-	List<Double> result_list = new ArrayList<Double>();
-    public List<Double> averageOfLevels(TreeNode root) {
-		helper(root,0);
+	public boolean canFinish(int numCourses, int[][] prerequisites) {
+    	//创建stack用来存放入度为0的顶点
+		Stack<Integer> stack = new Stack<Integer>();
+
+		//用于记录已遍历的节点数
+		int num =0;
+
+		//用于存放各顶点的入度
+		int[] count = new int[numCourses];
 		
-		for(int i=0;i<count_list.size();i++)
-		{
-			result_list.add(((double)(sum_list.get(i))/count_list.get(i)));
+		//使用邻接表存储图
+		LinkedList<Integer> adj[] = new LinkedList[numCourses];
+		for(int i=0;i<numCourses;i++)
+			adj[i] = new LinkedList<Integer>();
+
+        //记录各顶点的入度及节点的连结关系
+		for(int i=0;i<prerequisites.length;i++){
+			count[prerequisites[i][0]] += 1;
+			adj[prerequisites[i][1]].add(prerequisites[i][0]);
 		}
-		return result_list;
-    }
-	
-	private void helper(TreeNode node,int level)
-	{
-		if(sum_list.size() == level)
-		{
-			sum_list.add((long)node.val);	
-			count_list.add(1);
+
+		//将入度为0的顶点存入stack
+		for(int i=0;i<numCourses;i++){
+			if(count[i] ==0)
+				stack.push(i);
 		}
-		else
-		{
-			sum_list.set(level,sum_list.get(level)+node.val);
-			count_list.set(level,count_list.get(level)+1);
+
+		//删除入度为0的该顶点的所有边，并且与之连结的顶点的入度都应该-1，如果顶点的入度变为0，则存入stack
+		while(!stack.isEmpty()){
+			int top = stack.pop();
+			for(int index:adj[top]){
+				count[index] -= 1;
+				if(count[index] ==0)
+					stack.push(index);	
+			}
+			num++;
 		}
-		if(node.left != null)
-			helper(node.left,level+1);
-		if(node.right != null)
-			helper(node.right,level +1);
+
+		return num==numCourses;
 	}
 }
 ```
