--- a/solution/207.Course-Schedule.md
+++ b/solution/207.Course-Schedule.md
@@ -69,7 +69,7 @@ class Solution {
 		for(int i=0;i<numCourses;i++)
 			adj[i] = new LinkedList<Integer>();
 
-        //记录各顶点的入度及节点的连结关系
+        //记录各顶点的入度及顶点的连结关系
 		for(int i=0;i<prerequisites.length;i++){
 			count[prerequisites[i][0]] += 1;
 			adj[prerequisites[i][1]].add(prerequisites[i][0]);
