--- a/solution/207.Course-Schedule.md
+++ b/solution/207.Course-Schedule.md
@@ -38,7 +38,7 @@ Explanation: There are a total of 2 courses to take.
 #### 思路
 AOV图的求解，可以使用拓扑排序或者遍历算法判断是否存在环。  
 * 拓扑排序：对于AOV图，寻找环是否存在的首选方法是拓扑排序。从一个入度为0的节点开始，依次删除入度为0的节点，并将该节点指向的下一个节点的入度减-1，判断是否最后所有的节点都可以被删除。如果所有节点都可以被删除，证明该AOV图可以遍历所有节点。 
-* 遍历算法：
+* 遍历算法：这里采用了DFS法。在遍历算法中，判断环是否存在的方式是已经访问过的顶点是否再次被访问。如果再次被访问，证明存在环。我们可以使用-1, 0, 1记录顶点的状态。如-1表示该顶点在该次循环中已经被访问过，0代表顶点未被访问过，1代表顶点已经遍历并且合法。
 
 #### 代码
 
@@ -98,56 +98,71 @@ class Solution {
 ```
 
 
-2.迭代法  
+2.计算入度 + DFS法  
 
-* Runtime: 5 ms, faster than 11.58% of Java online submissions for Average of Levels in Binary Tree.
-* Memory Usage: 44.7 MB, less than 8.00% of Java online submissions for Average of Levels in Binary Tree.
+* Runtime: 2 ms, faster than 99.75% of Java online submissions for Course Schedule.
+* Memory Usage: 41.8 MB, less than 98.46% of Java online submissions for Course Schedule.
 
 ```Java
 /**
  * @author RyuuI
- * Definition for a binary tree node.
- * public class TreeNode {
- *     int val;
- *     TreeNode left;
- *     TreeNode right;
- *     TreeNode(int x) { val = x; }
- * }
  */
 class Solution {
-    public List<Double> averageOfLevels(TreeNode root) {
-		List<Double> list =  new ArrayList<Double>();
-		if(root==null)
-			return list;
-		
-		Queue<TreeNode> queue = new LinkedList<TreeNode>();
-		queue.offer(root);
-		queue.offer(null);
-		long sum =0;
-		int count =0;
-		
-		while(queue.size()>1)
-		{
-			TreeNode top = queue.remove();
-			sum += top.val;
-			count++;
-			
-			if(top.left != null)
-				queue.offer(top.left);
-			if(top.right != null)
-				queue.offer(top.right);
-			
-			if(queue.peek() ==null)
-			{
-				list.add(((double)sum)/count);
-				sum =0;
-				count =0;
-				queue.remove();
-				queue.offer(null);
+	int num;
+	int[] visited;
+	public boolean canFinish(int numCourses, int[][] prerequisites) {
+		num =0;
+
+		//用于存放各顶点的入度
+		int[] count = new int[numCourses];
+
+		//用于存放顶点是否已经遍历
+		visited = new int[numCourses];
+
+		//使用邻接表存储图
+		LinkedList<Integer> adj[] = new LinkedList[numCourses];
+		for(int i=0;i<numCourses;i++)
+			adj[i] = new LinkedList<Integer>();
+
+		//记录各顶点的入度及顶点的连结关系
+		for(int i=0;i<prerequisites.length;i++){
+			count[prerequisites[i][0]] += 1;
+			adj[prerequisites[i][1]].add(prerequisites[i][0]);
+		}
+
+		//各自从所有入度为0的顶点开始遍历
+		for(int i=0;i<count.length;i++){
+			if(count[i] == 0){
+				if(!helper(adj,i,visited))
+					return false;
 			}
 		}
-		return list;   
-    }
+		return num == numCourses;
+	}
+
+//使用-1, 0, 1来记录顶点的状态。
+//-1：-该顶点在本次循环中已经被访问过
+// 0：顶点未被访问过
+// 1：顶点已经遍历并且合法
+	private boolean helper(LinkedList<Integer> adj[], int start, int[] visited){
+	//该顶点合法，直接返回true
+		if(visited[start] == 1)
+			return true;
+
+	//该顶点在本次循环中被访问过，再次访问，所以存在环，返回false
+		if(visited[start] == -1)
+			return false;
+
+		visited[start] =-1;
+		for(int index:adj[start]){
+			if(!helper(adj,index,visited))
+				return false;
+		}
+	//记录已遍历的合法定点数
+		num++;
+		visited[start] =1;
+		return true;
+	}
 }
 ```
 
