--- a/solution/207.Course-Schedule.md
+++ b/solution/207.Course-Schedule.md
@@ -141,7 +141,7 @@ class Solution {
 	}
 
 //使用-1, 0, 1来记录顶点的状态。
-//-1：-该顶点在本次循环中已经被访问过
+//-1：该顶点在本次循环中已经被访问过
 // 0：顶点未被访问过
 // 1：顶点已经遍历并且合法
 	private boolean helper(LinkedList<Integer> adj[], int start, int[] visited){
