--- a/solution/207.Course-Schedule.md
+++ b/solution/207.Course-Schedule.md
@@ -145,7 +145,7 @@ class Solution {
 // 0：顶点未被访问过
 // 1：顶点已经遍历并且合法
 	private boolean helper(LinkedList<Integer> adj[], int start, int[] visited){
-	//该顶点合法，直接返回true
+	//该顶点已遍历且合法，直接返回true
 		if(visited[start] == 1)
 			return true;
 
