--- a/solution/207.Course-Schedule.md
+++ b/solution/207.Course-Schedule.md
@@ -166,6 +166,58 @@ class Solution {
 }
 ```
 
+
+2.不使用入度 + DFS法  
+
+* Runtime: 2 ms, faster than 99.75% of Java online submissions for Course Schedule.
+* Memory Usage: 41.9 MB, less than 98.46% of Java online submissions for Course Schedule.
+
+```Java
+/**
+ * @author RyuuI
+ */
+class Solution {
+	int[] visited;
+	public boolean canFinish(int numCourses, int[][] prerequisites) {
+		visited = new int[numCourses];
+		LinkedList<Integer> adj[] = new LinkedList[numCourses];
+		for(int i=0;i<numCourses;i++)
+			adj[i] = new LinkedList<Integer>();
+		for(int i=0;i<prerequisites.length;i++){
+			adj[prerequisites[i][1]].add(prerequisites[i][0]);
+		}
+		for(int i=0;i<numCourses;i++){
+			if(!helper(adj,i,visited))
+				return false;
+		}
+		return true;
+	}
+
+//使用-1, 0, 1来记录顶点的状态。
+//-1：-该顶点在本次循环中已经被访问过
+// 0：顶点未被访问过
+// 1：顶点已经遍历并且合法
+	private boolean helper(LinkedList<Integer> adj[], int start, int[] visited){
+	//该顶点已遍历且合法，直接返回true
+		if(visited[start] == 1)
+			return true;
+
+	//该顶点在本次循环中被访问过，再次访问，所以存在环，返回false
+		if(visited[start] == -1)
+			return false;
+
+		
+		visited[start] =-1;
+		for(int index:adj[start]){
+			if(!helper(adj,index,visited))
+				return false;
+		}
+		visited[start] =1;
+		return true;
+	}
+}
+```
+
 ##### C++
 
 
