--- a/solution/207.Course-Schedule.md
+++ b/solution/207.Course-Schedule.md
@@ -167,7 +167,7 @@ class Solution {
 ```
 
 
-2.不使用入度 + DFS法  
+3.不使用入度 + DFS法  
 
 * Runtime: 2 ms, faster than 99.75% of Java online submissions for Course Schedule.
 * Memory Usage: 41.9 MB, less than 98.46% of Java online submissions for Course Schedule.
@@ -179,13 +179,20 @@ class Solution {
 class Solution {
 	int[] visited;
 	public boolean canFinish(int numCourses, int[][] prerequisites) {
+	        //用于存放顶点是否已经遍历
 		visited = new int[numCourses];
+		
+		//使用邻接表存储图
 		LinkedList<Integer> adj[] = new LinkedList[numCourses];
 		for(int i=0;i<numCourses;i++)
 			adj[i] = new LinkedList<Integer>();
+			
+		//记录各顶点的连结关系	
 		for(int i=0;i<prerequisites.length;i++){
 			adj[prerequisites[i][1]].add(prerequisites[i][0]);
 		}
+		
+		//检查每一个顶点
 		for(int i=0;i<numCourses;i++){
 			if(!helper(adj,i,visited))
 				return false;
