--- a/solution/210.Course-Schedule-II.md
+++ b/solution/210.Course-Schedule-II.md
@@ -33,7 +33,7 @@ Explanation: There are a total of 4 courses to take. To take course 3 you should
 
 #### 分析
 链接名称
-这道题和[207. Course Schedule](solution/207.Course-Schedule.md)的解法并没有太大的区别，只不过需要增加课程的路径数组。 
+这道题和[207. Course Schedule](./solution/207.Course-Schedule.md)的解法并没有太大的区别，只不过需要增加课程的路径数组。 
 实质求的是AOV图中是否存在环。因为如果存在环，证明两门课程之间互为前置课程，因而形成矛盾。如果不存在环，则要输出改数组。
 
 #### 思路
