--- a/solution/210.Course-Schedule-II.md
+++ b/solution/210.Course-Schedule-II.md
@@ -38,8 +38,8 @@ Explanation: There are a total of 4 courses to take. To take course 3 you should
 
 #### 思路
 AOV图的求解，可以使用拓扑排序或者遍历算法判断是否存在环。  
-* 拓扑排序：对于AOV图，寻找环是否存在的首选方法是拓扑排序。从一个入度为0的顶点开始，依次删除入度为0的顶点，并将该顶点指向的下一个顶点的入度减-1，判断是否最后所有的顶点都可以被删除。如果所有顶点都可以被删除，证明该AOV图可以遍历所有顶点。 
-* 遍历算法：这里采用了DFS法。在遍历算法中，判断环是否存在的方式是已经访问过的顶点是否再次被访问。如果再次被访问，证明存在环。我们可以使用-1, 0, 1记录顶点的状态。如-1表示该顶点在该次循环中已经被访问过，0代表顶点未被访问过，1代表顶点已经遍历并且合法。
+* 拓扑排序：对于AOV图，寻找环是否存在的首选方法是拓扑排序。从一个入度为0的顶点开始，依次删除入度为0的顶点，并将该顶点指向的下一个顶点的入度减-1，判断是否最后所有的顶点都可以被删除。如果所有顶点都可以被删除，证明该AOV图可以遍历所有顶点。并且记录遍历过的顶点。
+* 遍历算法：这里采用了DFS法。在遍历算法中，判断环是否存在的方式是已经访问过的顶点是否再次被访问。如果再次被访问，证明存在环。我们可以使用-1, 0, 1记录顶点的状态。如-1表示该顶点在该次循环中已经被访问过，0代表顶点未被访问过，1代表顶点已经遍历并且合法。另外，需要跟踪访问过的顶点。这里使用一个stack进行存储。我们可以知道，后继顶点一定是在栈底的，因为DFS中，会先存储最底层的顶点。
 
 #### 代码
 
