--- a/solution/215.Kth-Largest-Element-in-an-Array.md
+++ b/solution/215.Kth-Largest-Element-in-an-Array.md
@@ -25,13 +25,12 @@ You may assume k is always valid, 1 ≤ k ≤ array's length.
 
 
 #### 分析
-链接名称
-这道题和[207. Course Schedule](https://github.com/Ryuui-tkb/LeetCode/blob/master/solution/207.Course-Schedule.md)的解法并没有太大的区别，只不过需要增加课程的路径数组。   
-实质求的是AOV图中是否存在环。如果存在环，证明两门课程之间互为前置课程，因而形成矛盾。如果不存在环，则要输出该数组。
+求第K大的数，有两个解题思路：最大堆和快速选择。
+* 最大堆：将所有数推入最大堆，第K个弹出的数即为第K大的数，可以在原地进行最大堆排序，其时间复杂度是O(logn)。
+* 快速选择：通过使用随机选择基准元素+快速排序，在从大到小排序的数组中求得第K个位置的数，可原地进行，其时间复杂度是O(n); 
 
 #### 思路
-AOV图的求解，可以使用拓扑排序或者遍历算法判断是否存在环。  
-* 拓扑排序：对于AOV图，寻找环是否存在的首选方法是拓扑排序。从一个入度为0的顶点开始，依次删除入度为0的顶点，并将该顶点指向的下一个顶点的入度减-1，判断是否最后所有的顶点都可以被删除。如果所有顶点都可以被删除，证明该AOV图可以遍历所有顶点。并且记录遍历过的顶点。
+* 最大堆：原地建立最大堆，一个个
 * 遍历算法：这里采用了DFS法。在遍历算法中，判断环是否存在的方式是已经访问过的顶点是否再次被访问。如果再次被访问，证明存在环。我们可以使用-1, 0, 1记录顶点的状态。如-1表示该顶点在该次循环中已经被访问过，0代表顶点未被访问过，1代表顶点已经遍历并且合法。另外，需要跟踪访问过的顶点。这里使用一个stack进行存储。我们可以知道，后继顶点一定是在栈底的，因为DFS中，会先存储最底层的顶点。
 
 #### 代码
