--- a/solution/215.Kth-Largest-Element-in-an-Array.md
+++ b/solution/215.Kth-Largest-Element-in-an-Array.md
@@ -37,113 +37,147 @@ You may assume k is always valid, 1 ≤ k ≤ array's length.
 
 ##### JAVA
 
-1.拓扑排序
+1.最大堆
 
-* Runtime: 4 ms, faster than 85.64% of Java online submissions for Course Schedule II.
-* Memory Usage: 42.6 MB, less than 96.34% of Java online submissions for Course Schedule II.
+* Runtime: 2 ms, faster than 80.22% of Java online submissions for Kth Largest Element in an Array.
+* Memory Usage: 39.4 MB, less than 95.80% of Java online submissions for Kth Largest Element in an Array.
 
 ```Java
 /**
  * @author RyuuI
  */
 class Solution {
-	public int[] findOrder(int numCourses, int[][] prerequisites) {
-		if(numCourses ==0)
-			return (new int[0]);
-		Stack<Integer> stack = new Stack<Integer>();
-		LinkedList<Integer> adj[] = new LinkedList[numCourses];
-		for(int i=0;i<adj.length;i++){
-			adj[i] = new LinkedList<Integer>();
-		}
-		int[] count = new int[numCourses];
-		int[] result = new int[numCourses];
-		int index = 0;
+    int size =0;
+    public int findKthLargest(int[] nums, int k) {
+        if(nums.length ==1)
+            return nums[0];
+        //原地进行最大堆排序
+        for(int i=0;i<nums.length;i++){
+            insertion(nums,i);
+        }
+        //按序弹出前K-1个值
+        for(int time=1;time<k;time++)
+            pop(nums);
+        return nums[0];
+    }
 
-		for(int[] prerequisite:prerequisites){
-			count[prerequisite[0]] += 1;
-			adj[prerequisite[1]].add(prerequisite[0]);
-		}
-		for(int i=0;i<count.length;i++){
-			if(count[i] ==0)
-				stack.push(i);
-		}
+    private void insertion(int[] nums, int index){
+        size++;
+        int sonIndex = size-1;
+        int parentIndex = (sonIndex-1)/2;
+        while((parentIndex >=0) && (nums[parentIndex] < nums[sonIndex])){
+            swap(nums,parentIndex,sonIndex);
+            sonIndex = parentIndex;
+            parentIndex = (sonIndex-1)/2;
+        }   
+    }
 
-		while(!stack.isEmpty()){
-			int top = stack.pop();
-			result[index] = top;
-			index++;
-			for(int num:adj[top]){
-				count[num] -= 1;
-				if(count[num] ==0)
-					stack.push(num);
-			}
-		}
-		if(index != numCourses)
-			return (new int[0]);
-		return result;
-	}
+    private int pop(int[] nums){
+        int tmp = nums[0];
+        swap(nums,0,size-1);
+        size--;
+        int parentIndex = 0;
+        int maxIndex = 0;
+        while(true){
+            maxIndex = parentIndex;
+            if((parentIndex*2+2 <= size-1) && (nums[parentIndex*2+2] > nums[parentIndex])){
+                maxIndex = parentIndex*2+2;
+            }
+            if((parentIndex*2+1 <= size-1) && (nums[parentIndex*2+1] > nums[maxIndex])){
+                maxIndex = parentIndex*2+1;
+            }
+            if(maxIndex == parentIndex)
+                break;
+            else{
+                swap(nums,maxIndex,parentIndex);
+                parentIndex = maxIndex;
+            }
+
+        }
+        return tmp;
+
+    }
+
+    private void swap(int[] nums, int firstIndex, int secondIndex){
+        int tmp = nums[firstIndex];
+        nums[firstIndex] = nums[secondIndex];
+        nums[secondIndex] = tmp;
+    }
 }
 ```
 
 
-2.DFS法  
+2.快速选择 
 
-* Runtime: 4 ms, faster than 85.64% of Java online submissions for Course Schedule II.
-* Memory Usage: 42.7 MB, less than 96.34% of Java online submissions for Course Schedule II.
+* Runtime: 2 ms, faster than 80.22% of Java online submissions for Kth Largest Element in an Array.
+* Memory Usage: 39.5 MB, less than 88.45% of Java online submissions for Kth Largest Element in an Array.
 
 ```Java
 /**
  * @author RyuuI
  */
 class Solution {
-	LinkedList<Integer> adj[];
-	int[] visited;
-	Stack<Integer> stack;
-	public int[] findOrder(int numCourses, int[][] prerequisites) {
-		if(numCourses <= 0)
-			return (new int[0]);
-		stack = new Stack<Integer>();
-		int[] result = new int[numCourses];
+    int result = 0;
+    Random r = new Random();
+    public int findKthLargest(int[] nums, int k) {
+        if(nums.length ==1)
+            return nums[0];
+        //第K大的数的下标是K-1
+        int kIndex = k-1;
 
-		adj = new LinkedList[numCourses];
-		for(int i=0;i<numCourses;i++){
-			adj[i] = new LinkedList<Integer>();
-		}
+        //随机选择基准元素
+        int nowIndex = r.nextInt(nums.length);
+        //将基准元素放在第一个位置
+        swap(nums,0, nowIndex);
+        int leftIndex = 0;
+        int middleIndex =0;
+        for(int i=1;i<nums.length;i++){
+            //大于基准元素的放在左侧，等于基准元素放在中间，大于基准元素放在右侧
+            if(nums[i]>nums[0]){
+                swap(nums,leftIndex+1,i);
+                leftIndex++;
+                //如果无中间元素，需要更新中间元素的坐标。如果中间元素存在，则middleIndex++；如果不存在，middleIndex= leftIndex
+                if(middleIndex >= leftIndex){
+                    swap(nums,middleIndex+1,i);
+                    middleIndex++;
+                }
+                else{
+                    middleIndex = leftIndex;
+                }
+            }
+            else if(nums[i] == nums[0]){
+                swap(nums,middleIndex+1,i);
+                middleIndex++;
+            }
+        }
+        //将在index=0的基准元素，放回中间。
+        swap(nums,0,leftIndex);
+        leftIndex--;
+        /*
+        1.如果K在中间区域，则直接返回；
+        2.如果K在左侧区域，则丢弃中间和右侧，继续查找；
+        3.如果K在右侧区域，则丢弃中间和左侧，继续查找，且要修改K的数值，即K = K - 左侧和中间的元素数量
+        */
+        if((leftIndex+1 <= kIndex) && (kIndex<=middleIndex))
+            return nums[leftIndex+1];
+        else if(leftIndex >= kIndex){
+            int newArray[] = Arrays.copyOfRange(nums, 0, leftIndex+1);
 
-		visited = new int[numCourses];
+            result = findKthLargest(newArray,k);
+        }
+        else if (kIndex > middleIndex){
+            int newArray[] = Arrays.copyOfRange(nums, middleIndex+1, nums.length);
 
-		for(int[] prerequisite:prerequisites){
-			adj[prerequisite[1]].add(prerequisite[0]);
-		}
-		for(int i=0; i< numCourses;i++){
-			if(!helper(adj,i,visited))
-				return (new int[0]);
-		}
-		for(int i=0;i<numCourses;i++){
-			result[i] = stack.pop();
-		}
+            result = findKthLargest(newArray,k-middleIndex-1);
+        }
+        return result;
+    }
 
-
-		return result;
-
-	}
-
-	private boolean helper(LinkedList<Integer> adj[], int start, int[] visited){
-		if(visited[start] == 1)
-			return true;
-		if(visited[start] == -1)
-			return false;
-		visited[start] =-1;
-
-		for(int num:adj[start]){
-			if(!helper(adj, num, visited))
-				return false;
-		}
-		visited[start] = 1;
-		stack.push(start);
-		return true;
-
-	}
+    private void swap(int[] nums, int firstIndex, int secondIndex){
+        int tmp = nums[firstIndex];
+        nums[firstIndex] = nums[secondIndex];
+        nums[secondIndex] = tmp;
+    }
 }
 ```
 
