--- a/solution/215.Kth-Largest-Element-in-an-Array.md
+++ b/solution/215.Kth-Largest-Element-in-an-Array.md
@@ -30,8 +30,11 @@ You may assume k is always valid, 1 ≤ k ≤ array's length.
 * 快速选择：通过使用随机选择基准元素+快速排序，在从大到小排序的数组中求得第K个位置的数，可原地进行，其时间复杂度是O(n); 
 
 #### 思路
-* 最大堆：原地建立最大堆，一个个
-* 遍历算法：这里采用了DFS法。在遍历算法中，判断环是否存在的方式是已经访问过的顶点是否再次被访问。如果再次被访问，证明存在环。我们可以使用-1, 0, 1记录顶点的状态。如-1表示该顶点在该次循环中已经被访问过，0代表顶点未被访问过，1代表顶点已经遍历并且合法。另外，需要跟踪访问过的顶点。这里使用一个stack进行存储。我们可以知道，后继顶点一定是在栈底的，因为DFS中，会先存储最底层的顶点。
+* 最大堆：原地建立最大堆，一个个弹出，第K个弹出的就是第K大元素。
+* 快速选择：随机选择基准元素，并将所有元素分为三个区域。等于基准元素的放在中间，小于基准元素的放在左侧，大于基准元素的放在右侧。   
+1. 如果基准元素在左侧，则删除中间+右侧的所有元素；  
+2. 如果基准元素在右侧，则删除中间+左侧的所有元素；  
+3. 如果基准元素在中间，则直接弹出基准元素。  
 
 #### 代码
 
