--- a/solution/215.Kth-Largest-Element-in-an-Array.md
+++ b/solution/215.Kth-Largest-Element-in-an-Array.md
@@ -32,9 +32,9 @@ You may assume k is always valid, 1 ≤ k ≤ array's length.
 #### 思路
 * 最大堆：原地建立最大堆，一个个弹出，第K个弹出的就是第K大元素。
 * 快速选择：随机选择基准元素，并将所有元素分为三个区域。等于基准元素的放在中间，小于基准元素的放在左侧，大于基准元素的放在右侧。   
-1. 如果基准元素在左侧，则删除中间+右侧的所有元素；  
-2. 如果基准元素在右侧，则删除中间+左侧的所有元素；  
-3. 如果基准元素在中间，则直接弹出基准元素。  
+  > 如果基准元素在左侧，则删除中间+右侧的所有元素；  
+  > 如果基准元素在右侧，则删除中间+左侧的所有元素；  
+  > 如果基准元素在中间，则直接弹出基准元素。  
 
 #### 代码
 
