docs(solution/1267.count-servers-that-communicate.md): modify the markdown file of No.1267 problem

--- a/solution/1267.Count-Servers-that-Communicate.md
+++ b/solution/1267.Count-Servers-that-Communicate.md
@@ -10,19 +10,19 @@ You are given a map of a server center, represented as a m * n integer matrix gr
 Return the number of servers that communicate with any other server.  
 
 ### Example 1:  
-![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/1267_ex1.png)  
+![Image text](../img/1267_ex1.png)  
 Input: grid = [[1,0],[0,1]]  
 Output: 0  
 Explanation: No servers can communicate with others.  
 
 ### Example 2:  
-![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/1267_ex2.png) 
+![Image text](../img/1267_ex2.png) 
 Input: grid = [[1,0],[1,1]]  
 Output: 3  
 Explanation: All three servers can communicate with at least one other server.  
 
 ### Example 3:  
-![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/1267_ex3.png)  
+![Image text](../img/1267_ex3.png)  
 Input: grid = [[1,1,0,0],[0,0,1,0],[0,0,1,0],[0,0,0,1]]  
 Output: 4  
 Explanation: The two servers in the first row can communicate with each other. The two servers in the third column can communicate with each other. The server at right bottom corner can't communicate with any other server.  
