--- a/solution/429.N-ary-Tree-Level-Order-Traversal.md
+++ b/solution/429.N-ary-Tree-Level-Order-Traversal.md
@@ -8,7 +8,7 @@
 ## 题目描述
 Given an n-ary tree, return the level order traversal of its nodes' values.  
 
-Nary-Tree input serialization is represented in their level order traversal, each group of children is separated by the null value (See examples).  429
+Nary-Tree input serialization is represented in their level order traversal, each group of children is separated by the null value (See examples).  
 
 Example 1:  
 ![Image text](../img/429_ex1.png)  
