--- a/solution/2.Add-Two-Numbers.md
+++ b/solution/2.Add-Two-Numbers.md
@@ -1,40 +1,29 @@
 # 2.Add Two Numbers[两数相加]
-
 ## 信息卡片
-
 * 时间：2020-01-21
 * 题目链接：[English](https://leetcode.com/problems/add-two-numbers/)/[中文](https://leetcode-cn.com/problems/add-two-numbers/)
 * Tag：`Linked List`
+
 ## 题目描述
 You are given two non-empty linked lists representing two non-negative integers. The digits are stored in reverse order and each of their nodes contain a single digit. Add the two numbers and return it as a linked list.  
 You may assume the two numbers do not contain any leading zero, except the number 0 itself.  
-
-Example:
-
+### Example:
 Input: (2 -> 4 -> 3) + (5 -> 6 -> 4)   
 Output: 7 -> 0 -> 8   
 Explanation: 342 + 465 = 807.   
 
-
 ## 参考答案   
-
-
-#### 分析
-
+### 分析
 这道题考察的是链表的写法，要注意最后的进位。
-
-#### 思路
+### 思路
 略
-
-#### 代码
-
-##### JAVA
-
+### 代码
+##### C
+##### C++
+#### Java
 1.直接在list1上面进行操作，优点是节省空间。缺点是节点的操作较为复杂。
-
 * Runtime: 2 ms, faster than 72.01% of Java online submissions for Add Two Numbers.
 * Memory Usage: 45.4 MB, less than 73.98% of Java online submissions for Add Two Numbers.
-
 ```Java
 /**
  * @author RyuuI
@@ -110,13 +99,9 @@ class Solution {
     }
 }
 ```
-
-
 2.与1差不多，区别在于新建一个newlist用于保存节点和的结果。优点是节点操作较为简单，缺点是新建newlist需要额外的空间。
-
 * Runtime: 2 ms, faster than 72.01% of Java online submissions for Add Two Numbers.
 * Memory Usage: 50 MB, less than 5.01% of Java online submissions for Add Two Numbers.
-
 ```Java
 /**
  * @author RyuuI
@@ -177,13 +162,9 @@ class Solution {
     }
 }
 ```
-
-
 3.递归法，代码量少。因为需要使用大量空间，所以在实际项目中，如果数据太长，可能会爆栈。
-
 * Runtime: 2 ms, faster than 72.01% of Java online submissions for Add Two Numbers.
 * Memory Usage: 49.8 MB, less than 5.01% of Java online submissions for Add Two Numbers.
-
 ```Java
 /**
  * @author RyuuI
@@ -209,13 +190,5 @@ class Solution {
 	}
 }
 ```
-
-##### C++
-
-
 ##### Python
-
-
-## 优秀解答
-
->暂缺
+##### JS
