--- a/solution/2.Add-Two-Numbers.md
+++ b/solution/2.Add-Two-Numbers.md
@@ -1,10 +1,10 @@
-# 2.Add Two Numbers[两数相加]
-## 信息卡片
-* 时间：2020-01-21
-* 题目链接：[English](https://leetcode.com/problems/add-two-numbers/)/[中文](https://leetcode-cn.com/problems/add-two-numbers/)
+# 2.Add Two Numbers
+## Information
+* Date：2020-01-21
+* Link：[English](https://leetcode.com/problems/add-two-numbers/)/[中文](https://leetcode-cn.com/problems/add-two-numbers/)
 * Tag：`Linked List`
 
-## 题目描述
+## Problem Description
 You are given two non-empty linked lists representing two non-negative integers. The digits are stored in reverse order and each of their nodes contain a single digit. Add the two numbers and return it as a linked list.  
 You may assume the two numbers do not contain any leading zero, except the number 0 itself.  
 ### Example:
@@ -12,14 +12,10 @@ Input: (2 -> 4 -> 3) + (5 -> 6 -> 4)
 Output: 7 -> 0 -> 8   
 Explanation: 342 + 465 = 807.   
 
-## 参考答案   
-### 分析
+## Solutions
+### Analysis
 这道题考察的是链表的写法，要注意最后的进位。
-### 思路
-略
-### 代码
-##### C
-##### C++
+### Source Code
 #### Java
 1.直接在list1上面进行操作，优点是节省空间。缺点是节点的操作较为复杂。
 * Runtime: 2 ms, faster than 72.01% of Java online submissions for Add Two Numbers.
@@ -190,5 +186,7 @@ class Solution {
 	}
 }
 ```
+##### C
+##### C++
 ##### Python
 ##### JS
