--- a/solution/127.Word-Ladder.md
+++ b/solution/127.Word-Ladder.md
@@ -1,25 +1,20 @@
-# 127.Word Ladder[单词接龙]
-
-## 信息卡片
-
-* 时间：2020-02-25
-* 题目链接：[English](https://leetcode.com/problems/word-ladder/)/[中文](https://leetcode-cn.com/problems/word-ladder/)
+# 127.Word Ladder
+## Information
+* Date：2020-02-25
+* Link：[English](https://leetcode.com/problems/word-ladder/)/[中文](https://leetcode-cn.com/problems/word-ladder/)
 * Tag：`Graph` `BFS`
-## 题目描述
-Given two words (beginWord and endWord), and a dictionary's word list, find the length of shortest transformation sequence from beginWord to endWord, such that:  
+
+## Problem Description
+Given two words (beginWord and endWord), and a dictionary's word list, find the length of shortest transformation sequence from beginWord to endWord, such that:   
 1. Only one letter can be changed at a time.  
 2. Each transformed word must exist in the word list. Note that beginWord is not a transformed word.  
-
-Note:  
+### Note:  
 + Return 0 if there is no such transformation sequence.  
 + All words have the same length.  
 + All words contain only lowercase alphabetic characters.  
 + You may assume no duplicates in the word list.  
 + You may assume beginWord and endWord are non-empty and are not the same.  
-
-
-Example 1:  
-
+### Example 1:  
 Input:  
 beginWord = "hit",  
 endWord = "cog",  
@@ -28,41 +23,27 @@ wordList = ["hot","dot","dog","lot","log","cog"]
 Output: 5  
 Explanation: As one shortest transformation is "hit" -> "hot" -> "dot" -> "dog" -> "cog",  
 return its length 5.  
-
-
-Example 2:  
-
+### Example 2:  
 Input:  
 beginWord = "hit"  
 endWord = "cog"  
 wordList = ["hot","dot","dog","lot","log"]  
 
 Output: 0  
-Explanation: The endWord "cog" is not in wordList, therefore no possible transformation.  
+Explanation: The endWord "cog" is not in wordList, therefore no possible transformation.
 
-
-## 参考答案   
-
-
-#### 分析
-
-这道题要求转换的单词之间只能有1个不同的字母，所以我们可以考虑把相差一个字母的单词当作邻接的顶点，用图的思想来解答。转化成图后，事实上求的是起始顶点和终止顶点之间的最短路径。
-
-#### 思路
+## Solution
+### Analysis
+这道题要求转换的单词之间只能有1个不同的字母，所以我们可以考虑把相差一个字母的单词当作邻接的顶点，用图的思想来解答。转化成图后，事实上求的是起始顶点和终止顶点之间的最短路径。   
 朴素的解法是使用单向BFS计算层数获得最短路径值，但是这种解法的时空复杂度都较高。  
 有两种效率较高的解法：  
 1. 双向BFS算法：新掌握的优化算法，可以从两端进行BFS搜索，如果两端的BFS的元素存在交叉，则存在路径。 
 2. SPFA算法：根据大佬们的说法，这种算法存在缺陷。在实际的算法题中，可被特殊数据设计搞残，因此暂不做解答。
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.宽度优先遍历(BFS) + 建立邻接表（**朴素解法，时空复杂度都很高，效率最低**）
-
 * Runtime: 766 ms, faster than 8.55% of Java online submissions for Word Ladder.
 * Memory Usage: 45.6 MB, less than 13.14% of Java online submissions for Word Ladder.
-
 ```Java
 /**
  * @author RyuuI
@@ -140,12 +121,9 @@ class Solution {
 
 }
 ```
-
 2.宽度优先遍历(BFS) + 不使用邻接表（**朴素解法的改进，可以改善空间使用量，但是时间复杂度仍然高**）
-
 * Runtime: 676 ms, faster than 12.99% of Java online submissions for Word Ladder.  
 * Memory Usage: 39.4 MB, less than 91.24% of Java online submissions for Word Ladder.
-
 ```Java
 /**
  * @author RyuuI
@@ -190,12 +168,9 @@ class Solution {
         }
     }
 ```
-
 3.双向宽度优先遍历(双向BFS) + 当前单词和单词表中的单词做不同位数的比较（**本题中，使用该方法找寻邻接单词的效率低**）
-
 * Runtime: 146 ms, faster than 30.49% of Java online submissions for Word Ladder.   
 * Memory Usage: 41 MB, less than 70.07% of Java online submissions for Word Ladder.
-
 ```Java
 /**
  * @author RyuuI
@@ -257,12 +232,9 @@ class Solution {
 	}
 }
 ```
-
 4.双向宽度优先遍历(双向BFS) + 遍历与当前单词一个字母不同的所有单词（**本题中，使用该方法找寻邻接单词效率最高**）
-
 * Runtime: 9 ms, faster than 99.60% of Java online submissions for Word Ladder.   
 * Memory Usage: 42.4 MB, less than 37.23% of Java online submissions for Word Ladder.
-
 ```Java
 /**
  * @author RyuuI
@@ -328,13 +300,7 @@ class Solution {
 	}
 }
 ```
-
+##### C
 ##### C++
-
-
 ##### Python
-
-
-## 优秀解答
-
->暂缺
+##### JS
