--- a/solution/150.Evaluate-Reverse-Polish-Notation.md
+++ b/solution/150.Evaluate-Reverse-Polish-Notation.md
@@ -31,7 +31,7 @@ Explanation:
 = 22   
 
 ## Solution
-## Analysis
+### Analysis
 逆波兰表达式是一个后序遍历的表达式，在处理后序遍历的时候，可以使用栈。   
 * 将数据存入栈；
 * 当遍历到运算符的时候，弹出两个数，并进行计算，再将结果存入栈；
