--- a/solution/199.Binary-Tree-Right-Side-View.md
+++ b/solution/199.Binary-Tree-Right-Side-View.md
@@ -1,15 +1,12 @@
-# 199.Binary Tree Right Side View[二叉树的右视图]
-
-## 信息卡片
-
-* 时间：2020-09-06
-* 题目链接：[English](https://leetcode.com/problems/binary-tree-right-side-view/)/[中文](https://leetcode-cn.com/problems/binary-tree-right-side-view/)
+# 199.Binary Tree Right Side View
+## Information
+* Date：2020-09-06
+* Link：[English](https://leetcode.com/problems/binary-tree-right-side-view/)/[中文](https://leetcode-cn.com/problems/binary-tree-right-side-view/)
 * Tag：`Tree` `BFS` `DFS`
-## 题目描述
-Given a binary tree, imagine yourself standing on the right side of it, return the values of the nodes you can see ordered from top to bottom.
 
-Example:  
-  
+## Problem Description
+Given a binary tree, imagine yourself standing on the right side of it, return the values of the nodes you can see ordered from top to bottom.
+### Example:  
     Input: [1,2,3,null,5,null,4]
     Output: [1, 3, 4]
     Explanation:
@@ -20,27 +17,16 @@ Example:
      \     \
       5     4      <---
 
-
-## 参考答案   
-
-
-#### 分析
-
+## Solutions  
+#### Analysis
 This problem is asked for searching the rightest node on every layer. So we can use BFS or preorder traversal of DFS to get the answer.   
-
-#### 思路
 In BFS solution, get the last node on every layer.  
 In preorder traversal of DFS, create a array to save a node value for every layer. Then we can use the preorder traversal to update all values of array.  
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.BFS solution
-
 * Runtime: 1 ms, faster than 86.44% of Java online submissions for Binary Tree Right Side View.
 * Memory Usage: 38 MB, less than 82.53% of Java online submissions for Binary Tree Right Side View.
-
 ```Java
 /**
  * @author RyuuI
@@ -83,13 +69,9 @@ class Solution {
     }
 }
 ```
-
-
 2.DFS solution(preorder traversal)  
-
 * Runtime: 0 ms, faster than 100.00% of Java online submissions for Binary Tree Right Side View.
 * Memory Usage: 37.9 MB, less than 93.49% of Java online submissions for Binary Tree Right Side View.
-
 ```Java
 /**
  * @author RyuuI
@@ -130,13 +112,7 @@ class Solution {
     }
 }
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
