--- a/solution/199.Binary-Tree-Right-Side-View.md
+++ b/solution/199.Binary-Tree-Right-Side-View.md
@@ -18,7 +18,7 @@ Given a binary tree, imagine yourself standing on the right side of it, return t
       5     4      <---
 
 ## Solutions  
-#### Analysis
+### Analysis
 This problem is asked for searching the rightest node on every layer. So we can use BFS or preorder traversal of DFS to get the answer.   
 In BFS solution, get the last node on every layer.  
 In preorder traversal of DFS, create a array to save a node value for every layer. Then we can use the preorder traversal to update all values of array.  
