--- a/solution/207.Course-Schedule.md
+++ b/solution/207.Course-Schedule.md
@@ -1,54 +1,40 @@
-# 207.Course Schedule[课程表]
-
-## 信息卡片
-
-* 时间：2020-03-03
-* 题目链接：[English](https://leetcode.com/problems/course-schedule/)/[中文](https://leetcode-cn.com/problems/course-schedule/)
+# 207.Course Schedule
+## Information
+* Date：2020-03-03
+* Link：[English](https://leetcode.com/problems/course-schedule/)/[中文](https://leetcode-cn.com/problems/course-schedule/)
 * Tag：`Graph` `BFS` `DFS` `Topological Sort`
-## 题目描述
+
+## Problem Description
 There are a total of n courses you have to take, labeled from 0 to n-1.  
 Some courses may have prerequisites, for example to take course 0 you have to first take course 1, which is expressed as a pair: [0,1]  
 Given the total number of courses and a list of prerequisite pairs, is it possible for you to finish all courses?  
-
 ### Example 1:  
 Input: 2, [[1,0]]  
 Output: true  
 Explanation: There are a total of 2 courses to take.  
              To take course 1 you should have finished course 0. So it is possible.  
-
 ### Example 2:
 Input: 2, [[1,0],[0,1]]  
 Output: false   
 Explanation: There are a total of 2 courses to take.  
              To take course 1 you should have finished course 0, and to take course 0 you should  
              also have finished course 1. So it is impossible.  
-
 ### Note:
 1. The input prerequisites is a graph represented by a list of edges, not adjacency matrices. Read more about how a graph is represented.
 2. You may assume that there are no duplicate edges in the input prerequisites.
 
-
-
-## 参考答案   
-
-
-#### 分析
-这道题实质求的是AOV图中是否存在环。因为如果存在环，证明两门课程之间互为前置课程，因而形成矛盾。  
-
-#### 思路
+## Solutions
+### Analysis
+这道题实质求的是AOV图中是否存在环。因为如果存在环，证明两门课程之间互为前置课程，因而形成矛盾。   
 AOV图的求解，可以使用拓扑排序或者遍历算法判断是否存在环。  
 * 拓扑排序：对于AOV图，寻找环是否存在的首选方法是拓扑排序。从一个入度为0的顶点开始，依次删除入度为0的顶点，并将该顶点指向的下一个顶点的入度减-1，判断是否最后所有的顶点都可以被删除。如果所有顶点都可以被删除，证明该AOV图可以遍历所有顶点。 
 * 遍历算法：这里采用了DFS法。在遍历算法中，判断环是否存在的方式是已经访问过的顶点是否再次被访问。如果再次被访问，证明存在环。我们可以使用-1, 0, 1记录顶点的状态。如-1表示该顶点在该次循环中已经被访问过，0代表顶点未被访问过，1代表顶点已经遍历并且合法。
 
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.拓扑排序
-
 * Runtime: 4 ms, faster than 77.43% of Java online submissions for Course Schedule.
 * Memory Usage: 41.6 MB, less than 98.46% of Java online submissions for Course Schedule.
-
 ```Java
 /**
  * @author RyuuI
@@ -96,13 +82,9 @@ class Solution {
 	}
 }
 ```
-
-
 2.计算入度 + DFS法  
-
 * Runtime: 2 ms, faster than 99.75% of Java online submissions for Course Schedule.
 * Memory Usage: 41.8 MB, less than 98.46% of Java online submissions for Course Schedule.
-
 ```Java
 /**
  * @author RyuuI
@@ -165,13 +147,9 @@ class Solution {
 	}
 }
 ```
-
-
 3.不使用入度 + DFS法  
-
 * Runtime: 2 ms, faster than 99.75% of Java online submissions for Course Schedule.
 * Memory Usage: 41.9 MB, less than 98.46% of Java online submissions for Course Schedule.
-
 ```Java
 /**
  * @author RyuuI
@@ -224,13 +202,7 @@ class Solution {
 	}
 }
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
