--- a/solution/210.Course-Schedule-II.md
+++ b/solution/210.Course-Schedule-II.md
@@ -1,54 +1,39 @@
-# 210. Course Schedule II[课程表 II]
-
-## 信息卡片
-
-* 时间：2020-03-08
-* 题目链接：[English](https://leetcode.com/problems/course-schedule-ii/)/[中文](https://leetcode-cn.com/problems/course-schedule-ii/)
+# 210. Course Schedule II
+## Information
+* Date：2020-03-08
+* Link：[English](https://leetcode.com/problems/course-schedule-ii/)/[中文](https://leetcode-cn.com/problems/course-schedule-ii/)
 * Tag：`Graph` `BFS` `DFS` `Topological Sort`
-## 题目描述
+
+## Problem Description
 There are a total of n courses you have to take, labeled from 0 to n-1.  
 Some courses may have prerequisites, for example to take course 0 you have to first take course 1, which is expressed as a pair: [0,1]  
 Given the total number of courses and a list of prerequisite pairs, return the ordering of courses you should take to finish all courses.  
 There may be multiple correct orders, you just need to return one of them. If it is impossible to finish all courses, return an empty array.
-
 ### Example 1:  
 Input: 2, [[1,0]]  
 Output: [0,1]  
 Explanation: There are a total of 2 courses to take. To take course 1 you should have finished course 0. So the correct course order is [0,1] .  
-
 ### Example 2:
 Input: 4, [[1,0],[2,0],[3,1],[3,2]]  
 Output: [0,1,2,3] or [0,2,1,3]  
 Explanation: There are a total of 4 courses to take. To take course 3 you should have finished both courses 1 and 2. Both courses 1 and 2 should be taken after you finished course 0. 
              So one correct course order is [0,1,2,3]. Another correct ordering is [0,2,1,3] .
-
 ### Note:
 1. The input prerequisites is a graph represented by a list of edges, not adjacency matrices. Read more about how a graph is represented.  
 2. You may assume that there are no duplicate edges in the input prerequisites.  
 
-
-
-## 参考答案   
-
-
-#### 分析
+## Solutions
+### Analysis
 这道题和[207. Course Schedule](https://github.com/Ryuui-tkb/LeetCode/blob/master/solution/207.Course-Schedule.md)的解法并没有太大的区别，只不过需要增加课程的路径数组。   
-实质求的是AOV图中是否存在环。如果存在环，证明两门课程之间互为前置课程，因而形成矛盾。如果不存在环，则要输出该数组。
-
-#### 思路
+实质求的是AOV图中是否存在环。如果存在环，证明两门课程之间互为前置课程，因而形成矛盾。如果不存在环，则要输出该数组。  
 AOV图的求解，可以使用拓扑排序或者遍历算法判断是否存在环。  
 * 拓扑排序：对于AOV图，寻找环是否存在的首选方法是拓扑排序。从一个入度为0的顶点开始，依次删除入度为0的顶点，并将该顶点指向的下一个顶点的入度减-1，判断是否最后所有的顶点都可以被删除。如果所有顶点都可以被删除，证明该AOV图可以遍历所有顶点。并且记录遍历过的顶点。
 * 遍历算法：这里采用了DFS法。在遍历算法中，判断环是否存在的方式是已经访问过的顶点是否再次被访问。如果再次被访问，证明存在环。我们可以使用-1, 0, 1记录顶点的状态。如-1表示该顶点在该次循环中已经被访问过，0代表顶点未被访问过，1代表顶点已经遍历并且合法。另外，需要跟踪访问过的顶点。这里使用一个stack进行存储。我们可以知道，后继顶点一定是在栈底的，因为DFS中，会先存储最底层的顶点。
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.拓扑排序
-
 * Runtime: 4 ms, faster than 85.64% of Java online submissions for Course Schedule II.
 * Memory Usage: 42.6 MB, less than 96.34% of Java online submissions for Course Schedule II.
-
 ```Java
 /**
  * @author RyuuI
@@ -91,13 +76,9 @@ class Solution {
 	}
 }
 ```
-
-
 2.DFS法  
-
 * Runtime: 4 ms, faster than 85.64% of Java online submissions for Course Schedule II.
 * Memory Usage: 42.7 MB, less than 96.34% of Java online submissions for Course Schedule II.
-
 ```Java
 /**
  * @author RyuuI
@@ -153,13 +134,7 @@ class Solution {
 	}
 }
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
