--- a/solution/215.Kth-Largest-Element-in-an-Array.md
+++ b/solution/215.Kth-Largest-Element-in-an-Array.md
@@ -1,50 +1,34 @@
-# 215. Kth Largest Element in an Array[数组中的第K个最大元素]
-
-## 信息卡片
-
-* 时间：2020-06-21
-* 题目链接：[English](https://leetcode.com/problems/kth-largest-element-in-an-array/)/[中文](https://leetcode-cn.com/problems/kth-largest-element-in-an-array/)
+# 215. Kth Largest Element in an Array
+## Information
+* Date：2020-06-21
+* Link：[English](https://leetcode.com/problems/kth-largest-element-in-an-array/)/[中文](https://leetcode-cn.com/problems/kth-largest-element-in-an-array/)
 * Tag：`Heap` `Divide and Conquer`
-## 题目描述
-Find the kth largest element in an unsorted array. Note that it is the kth largest element in the sorted order, not the kth distinct element.
 
+## Problem Description
+Find the kth largest element in an unsorted array. Note that it is the kth largest element in the sorted order, not the kth distinct element.
 ### Example 1:  
 Input: [3,2,1,5,6,4] and k = 2  
 Output: 5  
-
 ### Example 2:
 Input: [3,2,3,1,2,4,5,5,6] and k = 4  
 Output: 4  
-
 ### Note:
 You may assume k is always valid, 1 ≤ k ≤ array's length.  
 
-
-
-## 参考答案   
-
-
-#### 分析
+## Solutions 
+### Analysis
 求第K大的数，有两个解题思路：最大堆和快速选择。
 * 最大堆：将所有数推入最大堆，第K个弹出的数即为第K大的数，可以在原地进行最大堆排序，其时间复杂度是O(logn)。
 * 快速选择：通过使用随机选择基准元素+快速排序，在从大到小排序的数组中求得第K个位置的数，可原地进行，其时间复杂度是O(n); 
-
-#### 思路
-* 最大堆：原地建立最大堆，一个个弹出，第K个弹出的就是第K大元素。
-* 快速选择：随机选择基准元素，并将所有元素分为三个区域。等于基准元素的放在中间，小于基准元素的放在左侧，大于基准元素的放在右侧。   
+  随机选择基准元素，并将所有元素分为三个区域。等于基准元素的放在中间，小于基准元素的放在左侧，大于基准元素的放在右侧。   
   > 如果基准元素在左侧，则删除中间+右侧的所有元素；  
   > 如果基准元素在右侧，则删除中间+左侧的所有元素；  
   > 如果基准元素在中间，则直接弹出基准元素。  
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.最大堆
-
 * Runtime: 2 ms, faster than 80.22% of Java online submissions for Kth Largest Element in an Array.
 * Memory Usage: 39.4 MB, less than 95.80% of Java online submissions for Kth Largest Element in an Array.
-
 ```Java
 /**
  * @author RyuuI
@@ -108,13 +92,9 @@ class Solution {
     }
 }
 ```
-
-
 2.快速选择 
-
 * Runtime: 2 ms, faster than 80.22% of Java online submissions for Kth Largest Element in an Array.
 * Memory Usage: 39.5 MB, less than 88.45% of Java online submissions for Kth Largest Element in an Array.
-
 ```Java
 /**
  * @author RyuuI
@@ -183,13 +163,7 @@ class Solution {
     }
 }
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
