--- a/solution/215.Kth-Largest-Element-in-an-Array.md
+++ b/solution/215.Kth-Largest-Element-in-an-Array.md
@@ -19,8 +19,8 @@ You may assume k is always valid, 1 ≤ k ≤ array's length.
 ### Analysis
 求第K大的数，有两个解题思路：最大堆和快速选择。
 * 最大堆：将所有数推入最大堆，第K个弹出的数即为第K大的数，可以在原地进行最大堆排序，其时间复杂度是O(logn)。
-* 快速选择：通过使用随机选择基准元素+快速排序，在从大到小排序的数组中求得第K个位置的数，可原地进行，其时间复杂度是O(n); 
-  随机选择基准元素，并将所有元素分为三个区域。等于基准元素的放在中间，小于基准元素的放在左侧，大于基准元素的放在右侧。   
+* 快速选择：通过使用随机选择基准元素+快速排序，在从大到小排序的数组中求得第K个位置的数，可原地进行，其时间复杂度是O(n);    
+  将所有元素分为三个区域。等于基准元素的放在中间，小于基准元素的放在左侧，大于基准元素的放在右侧。   
   > 如果基准元素在左侧，则删除中间+右侧的所有元素；  
   > 如果基准元素在右侧，则删除中间+左侧的所有元素；  
   > 如果基准元素在中间，则直接弹出基准元素。  
