--- a/solution/241.Different-Ways-to-Add-Parentheses.md
+++ b/solution/241.Different-Ways-to-Add-Parentheses.md
@@ -1,21 +1,17 @@
-# 241. Different Ways to Add Parentheses[为运算表达式设计优先级]
-
-## 信息卡片
-
-* 时间：2020-06-21
-* 题目链接：[English](https://leetcode.com/problems/different-ways-to-add-parentheses/)/[中文](https://leetcode-cn.com/problems/different-ways-to-add-parentheses/)
+# 241. Different Ways to Add Parentheses
+## Information
+* Date：2020-06-21
+* Link：[English](https://leetcode.com/problems/different-ways-to-add-parentheses/)/[中文](https://leetcode-cn.com/problems/different-ways-to-add-parentheses/)
 * Tag：`Map` `Divide and Conquer`
-## 题目描述
+
+## Problem Description
 Given a string of numbers and operators, return all possible results from computing all the different possible ways to group numbers and operators. The valid operators are +, - and \*.  
-
-
 ### Example 1:  
 Input: "2-1-1"  
 Output: [0, 2]  
 Explanation:   
 ((2-1)-1) = 0  
 (2-(1-1)) = 2  
-
 ### Example 2:
 Input: "2*3-4*5"  
 Output: [-34, -14, -10, -10, 10]  
@@ -26,24 +22,15 @@ Explanation:
 (2\*((3-4)\*5)) = -10  
 (((2\*3)-4)\*5) = 10 
 
-
-## 参考答案   
-
-
-#### 分析
-We can use divide and conquer to calculate the left and right substring of a operation, and add all result to the sub list.
-
-#### 思路
+## Solutions  
+### Analysis
+We can use divide and conquer to calculate the left and right substring of a operation, and add all result to the sub list.   
 Creat a hash map to save(input, list), we can never calculate the input which has saved in the hash map.  
 And use the divide and conquer to calculate the left and right substring.
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 * Runtime: 1 ms, faster than 99.62% of Java online submissions for Different Ways to Add Parentheses.
 * Memory Usage: 37.7 MB, less than 95.45% of Java online submissions for Different Ways to Add Parentheses.
-
 ```Java
 /**
  * @author RyuuI
@@ -83,13 +70,7 @@ class Solution {
     }
 }
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
