--- a/solution/429.N-ary-Tree-Level-Order-Traversal.md
+++ b/solution/429.N-ary-Tree-Level-Order-Traversal.md
@@ -1,52 +1,34 @@
-# 429.N-ary Tree Level Order Traversal[N叉树的层序遍历]
-
-## 信息卡片
-
-* 时间：2020-08-30
-* 题目链接：[English](https://leetcode.com/problems/n-ary-tree-level-order-traversal/)/[中文](https://leetcode-cn.com/problems/n-ary-tree-level-order-traversal/)
+# 429. N-ary Tree Level Order Traversal
+## Information
+* Date：2020-08-30
+* Link：[English](https://leetcode.com/problems/n-ary-tree-level-order-traversal/)/[中文](https://leetcode-cn.com/problems/n-ary-tree-level-order-traversal/)
 * Tag：`Tree` `DFS` `BFS`
-## 题目描述
+
+## Problem Description
 Given an n-ary tree, return the level order traversal of its nodes' values.  
-
 Nary-Tree input serialization is represented in their level order traversal, each group of children is separated by the null value (See examples).  
-
-Example 1:  
+### Example 1:  
 ![Image text](../img/429_ex1.png)  
 Input: root = [1,null,3,2,4,null,5,6]  
 Output: [[1],[3,2,4],[5,6]]   
-
-Example 2:  
+### Example 2:  
 ![Image text](../img/429_ex2.png)  
 Input: root = [1,null,2,3,4,5,null,null,6,7,null,8,null,9,10,null,null,11,null,12,null,13,null,null,14]  
 Output: [[1],[2,3,4,5],[6,7,8,9,10],[11,12,13],[14]]  
-
-
-Constraints:
-
+### Constraints:
 * The height of the n-ary tree is less than or equal to 1000
 * The total number of nodes is between [0, 10^4] 
 
-
-## 参考答案   
-
-
-#### 分析
-
-About the Breath First Search(BFS), there are two methods doing it. Recursive solution and Iterative solution. 
-
-#### 思路
+## Solutions
+### Analysis
+About the Breath First Search(BFS), there are two methods doing it. Recursive solution and Iterative solution.  
 In Recursive solution, we can traversal all nodes by preorder and mark a level num to all nodes. Then add the value of node to the corresponding position in list.  
 In Iterative solution, we need a queue for saving all nodes. Then get front node one by one.  
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.Recursive solution
-
 * Runtime: 2 ms, faster than 89.57% of Java online submissions for N-ary Tree Level Order Traversal.
 * Memory Usage: 40.5 MB, less than 62.26% of Java online submissions for N-ary Tree Level Order Traversal.
-
 ```Java
 /**
  * @author RyuuI
@@ -88,13 +70,9 @@ class Solution {
     }
 }
 ```
-
-
 2.Iterative Solution  
-
 * Runtime: 6 ms, faster than 18.06% of Java online submissions for N-ary Tree Level Order Traversal.
 * Memory Usage: 44.1 MB, less than 37.87% of Java online submissions for N-ary Tree Level Order Traversal.
-
 ```Java
 /**
  * @author RyuuI
@@ -145,13 +123,7 @@ class Solution {
     }
 }
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
