--- a/solution/589.N-ary-Tree-Preorder-Traversal.md
+++ b/solution/589.N-ary-Tree-Preorder-Traversal.md
@@ -1,56 +1,36 @@
-# 589.N-ary Tree Preorder Traversal[N叉树的前序遍历]
-
-## 信息卡片
-
-* 时间：2020-08-30
-* 题目链接：[English](https://leetcode.com/problems/n-ary-tree-preorder-traversal/)/[中文](https://leetcode-cn.com/problems/n-ary-tree-preorder-traversal/)
+# 589. N-ary Tree Preorder Traversal
+## Information
+* Date：2020-08-30
+* Link：[English](https://leetcode.com/problems/n-ary-tree-preorder-traversal/)/[中文](https://leetcode-cn.com/problems/n-ary-tree-preorder-traversal/)
 * Tag：`Tree` `DFS`
-## 题目描述
+
+## Problem Description
 Given an n-ary tree, return the preorder traversal of its nodes' values.  
-
 Nary-Tree input serialization is represented in their level order traversal, each group of children is separated by the null value (See examples).  
-
 Follow up:  
 Recursive solution is trivial, could you do it iteratively?  
-
-
-Example 1:  
+### Example 1:  
 ![Image text](../img/589_ex1.png)  
 Input: root = [1,null,3,2,4,null,5,6]  
 Output: [1,3,5,6,2,4]   
-
-Example 2:  
+### Example 2:  
 ![Image text](../img/589_ex2.png)  
 Input: root = [1,null,2,3,4,5,null,null,6,7,null,8,null,9,10,null,null,11,null,12,null,13,null,null,14]  
 Output: [1,2,3,6,7,11,14,4,8,12,5,9,13,10]  
-
-
-Constraints:
-
+### Constraints:
 * The height of the n-ary tree is less than or equal to 1000
 * The total number of nodes is between [0, 10^4] 
 
-
-## 参考答案   
-
-
-#### 分析
-
+## Solutions
+### Analysis
 About the Depth First Search(DFS), there are two methods doing it. Recursive solution and Iterative solution. 
-
-#### 思路
 In Recursive solution, we can just traversal root -> left childern -> mid children -> ... -> right children.  
 In Iterative solution, we need a stack for node. Then push root node and its children node from right to left.  
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.Recursive solution
-
 * Runtime: 0 ms, faster than 100.00% of Java online submissions for N-ary Tree Preorder Traversal.
 * Memory Usage: 40.5 MB, less than 57.81% of Java online submissions for N-ary Tree Preorder Traversal.
-
 ```Java
 /**
  * @author RyuuI
@@ -89,13 +69,9 @@ class Solution {
     }
 }
 ```
-
-
 2.Iterative Solution  
-
 * Runtime: 2 ms, faster than 58.22% of Java online submissions for N-ary Tree Preorder Traversal.
 * Memory Usage: 40.1 MB, less than 83.91% of Java online submissions for N-ary Tree Preorder Traversal.
-
 ```Java
 /**
  * @author RyuuI
@@ -137,13 +113,7 @@ class Solution {
     }
 }
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
