--- a/solution/703.Kth-Largest-Element-in-a-Stream.md
+++ b/solution/703.Kth-Largest-Element-in-a-Stream.md
@@ -1,14 +1,13 @@
-# 703. Kth Largest Element in a Stream[数据流中的第K大元素]
+# 703. Kth Largest Element in a Stream
 
-## 信息卡片
-
-* 时间：2020-06-22
-* 题目链接：[English](https://leetcode.com/problems/kth-largest-element-in-a-stream/)/[中文](https://leetcode-cn.com/problems/kth-largest-element-in-a-stream/)
+## Information
+* Date：2020-06-22
+* Link：[English](https://leetcode.com/problems/kth-largest-element-in-a-stream/)/[中文](https://leetcode-cn.com/problems/kth-largest-element-in-a-stream/)
 * Tag：`Heap`
-## 题目描述
+
+## Problem Description
 Design a class to find the kth largest element in a stream. Note that it is the kth largest element in the sorted order, not the kth distinct element.   
 Your KthLargest class will have a constructor which accepts an integer k and an integer array nums, which contains initial elements from the stream. For each call to the method KthLargest.add, return the element representing the kth largest element in the stream.   
-
 ### Example:  
 int k = 3;   
 int[] arr = [4,5,8,2];   
@@ -18,32 +17,20 @@ kthLargest.add(5);   // returns 5
 kthLargest.add(10);  // returns 5   
 kthLargest.add(9);   // returns 8   
 kthLargest.add(4);   // returns 8   
-
 ### Note:
 You may assume that nums' length ≥ k-1 and k ≥ 1.   
 
-
-
-## 参考答案   
-
-
-#### 分析
-数据流属于动态变化的数组，所以使用最小堆来动态跟踪第K大的数据。
-
-#### 思路
-最小堆限制只保存K个数，堆顶即为第K大的数。当新的数据加入时：
+## Solutions
+### Analysis
+数据流属于动态变化的数组，所以使用最小堆来动态跟踪第K大的数据。   
+最小堆限制只保存K个数，堆顶即为第K大的数。当新的数据加入时：  
 > 如果小于堆顶，直接丢弃；   
 > 如果大于堆顶，将堆顶数据抛出，加入新的数据，并获取新的堆顶。
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.最大堆
-
 * Runtime: 16 ms, faster than 69.62% of Java online submissions for Kth Largest Element in a Stream.
 * Memory Usage: 44.6 MB, less than 73.71% of Java online submissions for Kth Largest Element in a Stream.
-
 ```Java
 /**
  * @author RyuuI
@@ -118,13 +105,7 @@ class KthLargest {
  * int param_1 = obj.add(val);
  */
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
