--- a/solution/743.Network-Delay-Time.md
+++ b/solution/743.Network-Delay-Time.md
@@ -1,48 +1,33 @@
-# 743. Network Delay Time[网络延迟时间]
-
-## 信息卡片
-
-* 时间：2020-02-18
-* 题目链接：[English](https://leetcode.com/problems/network-delay-time/)/[中文](https://leetcode-cn.com/problems/network-delay-time/)
+# 743. Network Delay Time
+## Information
+* Date：2020-02-18
+* Link：[English](https://leetcode.com/problems/network-delay-time/)/[中文](https://leetcode-cn.com/problems/network-delay-time/)
 * Tag：`Graph`
-## 题目描述
+
+## Problem Description
 There are N network nodes, labelled 1 to N.  
 Given times, a list of travel times as directed edges times[i] = (u, v, w), where u is the source node, v is the target node, and w is the time it takes for a signal to travel from source to target.  
 Now, we send a signal from a certain node K. How long will it take for all nodes to receive the signal? If it is impossible, return -1.  
-
 ### Example 1:  
 ![Image text](https://raw.githubusercontent.com/Ryuui-tkb/LeetCode/master/img/743_ex1.png)  
 Input: times = [[2,1,1],[2,3,1],[3,4,1]], N = 4, K = 2  
 Output: 2  
-
 ### Note:
 1. N will be in the range [1, 100].
 2. K will be in the range [1, N].
 3. The length of times will be in the range [1, 6000].
 4. All edges times[i] = (u, v, w) will have 1 <= u, v <= N and 0 <= w <= 100.
 
-
-## 参考答案   
-
-
-#### 分析
-
-这道题考察的是图的最短路径的求解方法，这里考虑使用Dijkstra算法与Floyd算法求解。
-
-#### 思路
-这里提供两种解法。
+## Solutions   
+### Analysis
+这道题考察的是图的最短路径的求解方法，这里考虑使用Dijkstra算法与Floyd算法求解。  
 * Dijkstra算法: 比较适用于求解从某个顶点出发的最短路径。
 * Floyd算法: 适用于求解任意两个顶点的最短路径，时间复杂度为O(n^3)，所以如果只需要求解从某顶点出发的最短路径，Dijkstra算法较好。Floyd算法本质上是dp算法。
-
-#### 代码
-
-##### JAVA
-
+### Source Code
+#### Java
 1.Dijkstra算法
-
 * Runtime: 6 ms, faster than 97.06% of Java online submissions for Network Delay Time.
 * Memory Usage: 44.2 MB, less than 90.48% of Java online submissions for Network Delay Time.
-
 ```Java
 /**
  * @author RyuuI
@@ -107,13 +92,9 @@ class Solution {
 	}
 }
 ```
-
-
 2.Floyd算法
-
 * Runtime: 19 ms, faster than 71.15% of Java online submissions for Network Delay Time.
 * Memory Usage: 44.3 MB, less than 90.48% of Java online submissions for Network Delay Time.
-
 ```Java
 /**
  * @author RyuuI
@@ -161,13 +142,7 @@ class Solution {
 }
 }
 ```
-
-##### C++
-
-
-##### Python
-
-
-## 优秀解答
-
->暂缺
+#### C
+#### C++
+#### Python
+#### JS
